k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: archetype-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: archetype
