k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archetype-ingress
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: archetype.gustavohidalgo.com
    http:
      paths:
      - backend:
          service:
            name: archetype-service
            port:
              number: 80
        path: /
        pathType: Prefix
